--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "Open",
     "Download"
   ],
-  "author": "Joshua Tanner",
-  "license": "ISC",
+  "author": "Anay Baid"
   "dependencies": {
     "JSONStream": "^1.3.5",
     "combined-stream": "^1.0.7",
